8130847: Cloned object's fields observed as null after C2 escape analysis

Eliminated instance/array written to by an array copy variant must be correctly initialized when reallocated at a deopt

Reviewed-by: kvn, vlivanov